--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "useDefineForClassFields": true,
     "resolveJsonModule": true,
     "sourceMap": true,
+    "strictNullChecks": false,
     "baseUrl": ".",
     "types": [
       "webpack-env"
